# pytorch-playground

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pytorch_playground/: __init__.py  data.py  model.py  train.py
tests/: test_smoke.py
